<resources>
    <string name="sign_up_personal_name">본인 이름</string>
    <string name="sign_up_personal_name_input_hint">본인의 이름을 입력해주세요.</string>
    <string name="sign_up_agree_rules_subTitle">약관 동의</string>
    <string name="sign_up_agree_content_allAgree">모두 동의합니다.</string>
    <string name="sign_up_agree_content_ageLimit">(필수) 만 15세 이상입니다.</string>
    <string name="sign_up_agree_content_serviceAgree">서비스 이용약관 동의</string>
    <string name="sign_up_agree_content_personalCollectInfoAgree">개인정보 수집 및 이용 동의</string>
    <string name="sign_up_Farmer_InfoTitle">농가정보</string>
    <string name="sign_up_Farmer_AddressInfoSubTitle">농가 주소 정보</string>
    <string name="sign_up_Farmer_MathchingDescriptionSubTitle">농가 주소와 가까운 구직자를 매칭해드립니다.</string>
    <string name="sign_up_Farmer_ChoiceCropTitle">농가 재배품목 정보(최대 3개)</string>
    <string name="sign_up_Farmer_ChoiceCropSubTitle">농가 재배품목에 관심있는 구직자를 매칭해드립니다.</string>
    <string name="sign_up_Farmer_AddressInputTextFieldHintText">본인의 농가 도로명 주소를 검색해주세요.</string>
    <string name="sign_up_Farmer_AddressInputTextFieldLabel">농가 주소</string>
    <string name="sign_up_Farmer_AddressDetailInfoInputTextFieldHintText">농가 상세 주소를 입력해주세요.</string>
    <string name="worker_ResumeScreen_TabTitle_1">기본정보</string>
    <string name="worker_ResumeScreen_TabTitle_2">작업내용</string>
    <string name="worker_ResumeScreen_TabTitle_3">고용정보</string>
    <string name="worker_ResumeScreen_TabTitle_4">추가내용</string>
    <string name="날짜">날짜</string>
    <string name="공고글작성">공고글작성</string>
    <string name="공고쓰기">공고쓰기</string>
    <string name="대표주소">대표주소</string>
    <string name="app_name">농글</string>
    <string name="hello_blank_fragment">heelo</string>
    <string name="next_btn_Title">다음</string>
    <string name="완료">완료</string>
    <string name="가입완료">가입완료</string>
    <string name="시간선택">시간선택</string>
    <string name="필요인원">필요인원</string>
    <string name="필요인원설명">필요인원수를 숫자만 입력해주세요. 예) 3</string>
    <string name="근무요일을">근무 요일을 입력해주세요. 예)월수금</string>
    <string name="근무요일spinner">근무 요일을 선택해주세요.</string>
    <string name="근무_시작_시간을">근무 시작 시간을 선택해주세요.</string>
    <string name="근무_종료_시간을">근무 종료 시간을 선택해주세요.</string>
    <string name="근무_일">근무 일 선택</string>
    <string name="작업기간">작업기간</string>
    <string name="작업_시작_날짜를">작업 시작 날짜를 선택해주세요.</string>
    <string name="작업_종료_날짜를">작업 종료 날짜를 선택해주세요.</string>
    <string name="근무_시작_시간">근무 시작 시간</string>
    <string name="연령대">연령대</string>
    <string name="시작연령대">시작연령대</string>
    <string name="끝연령대">끝연령대</string>
    <string name="성별">성별</string>
    <string name="여">여</string>
    <string name="남">남</string>
    <string name="성별무관">성별무관</string>
    <string name="급여">급여</string>
    <string name="급여sub">※ 현재 최저 시급은 9,620원 입니다.</string>
    <string name="일급">일급</string>
    <string name="시급">시급</string>
    <string name="급여협의">급여협의</string>
    <string name="근무형태">근무형태</string>
    <string name="지원가능한_경력">지원가능한 경력</string>
    <string name="자격증_입력">자격증을 입력해주세요.</string>
    <string name="체류형">체류형</string>
    <string name="출퇴근형">출퇴근형</string>
    <string name="계약직">계약직</string>
    <string name="가능경력">지원가능한 경력</string>
    <string name="비경험자">비경험자</string>
    <string name="경험자">경험자</string>
    <string name="경력무관">경력무관</string>
    <string name="자격증">자격증</string>
    <string name="있음">있음</string>
    <string name="없음">없음</string>
    <string name="필요있음">필요있음</string>
    <string name="필요없음">필요없음</string>
    <string name="숙소제공">숙소제공</string>
    <string name="제공있음">제공있음</string>
    <string name="제공없음">제공없음</string>
    <string name="숙소정보를_입력">숙소정보를 입력해주세요. 예)마을회관</string>
    <string name="식사제공">식사제공</string>
    <string name="식사정보를">식사정보를 입력해주세요. 예)중식제공</string>
    <string name="공고글_마감설정">공고글 마감설정</string>
    <string name="마감기한">마감기한 설정</string>
    <string name="상시모집">상시모집</string>
    <string name="마감기한_날짜를">마감기한 날짜를 선택해주세요.</string>
    <string name="우대사항">우대사항</string>
    <string name="추가우대">추가로 우대사항이 있다면 입력해주세요.</string>
    <string name="확인사항">확인사항</string>
    <string name="확인">확인</string>
    <string name="조건1">근로계약서 작성을 약속합니다.</string>
    <string name="조건2">개인소득 및 4대보험 신고를 약속합니다.</string>
    <string name="_분안에">2분안에 입력해주세요.</string>
    <string name="인증번호가_불일치">인증번호가 맞지 않습니다.</string>
    <string name="서비스_이용약관">서비스 이용약관</string>
    <string name="광고성_정보동의">광고성 정보 동의</string>
    <string name="약관2">1. 수집 이용 목적\n\n회원이 수집 및 이용에 동의한 개인정보를 활용하여, 전자적 전송매체를 통해 서비스에 대한 개인 맞춤형 광고 정보(뉴스레터, 소식, 휴대폰 알림)를 전송할 수 있습니다.\n\n2. 수집하는 개인정보 항목\n\n필수 동의사항에서 개인정보 수집 및 이용에 동의한 항목\n\n3. 개인정보 보유 및 이용기간\n\n회원탈퇴를 요청하거나 개인정보의 수집 및 이용에 대한 동의를 철회하는 경우, 수집 및 이용목적이 달성되거나 이용기간이 종료한 경우 개인정보를 지체없이 파기합니다. 단, 상법 등 관계법령의 규정에 의하여 보존한 필요가 있는 경우 법령에서 규정한 보존기간 동안 거래내역과 최소한의 기본정보를 보유합니다.\n\n4. 수신동의 거부 및 철회방법 안내\n\n본 동의는 거부하실 수 있습니다. 다만 거부 시 동의를 통해 제공 가능한 각종 혜택, 이벤트 안내를 받아보실 수 없습니다. 본 수신동의를 철회하고자 할 경우에는 문자 수신 설정 페이지에서 수신여부를 변경하실 수 있습니다.</string>
    <string name="개인정보_수집_선택">개인정보 수집 및 이용동의(선택)</string>
    <string name="약관3">1. 수집 이용 목적\n\n상품, 서비스 영업, 홍보, 마케팅 발송을 목적으로 활용\n\n2. 수집하는 개인정보 항목\n전화번호, 서비스 이용 기록\n\n3. 개인정보 보유 및 이용기간\n회원 탈퇴시 즉시 파기\n\n4. 수신동의 거부 및 철회방법 안내\n본 동의는 거부하실 수 있습니다. 다만 거부 시 동의를 통해 제공 가능한 각종 혜택, 이벤트 안내를 받아보실 수 없습니다. 더 이상 상품, 서비스 영업, 홍보, 마케팅 발송을 원하시지 않는 경우 회원정보 수정 페이지에서 수신 여부를 변경하실 수 있습니다.</string>
    <string name="개인정보_수집_필수">개인정보 수집 및 이용동의(필수)</string>
    <string name="약관4">“농글”서비스 이용을 위해 아래와 같이 개인정보를 수집 및 이용합니다.\n\n동의를 거부할 권리가 있으며, 동의 거부 시 “농글” 회원 서비스 이용이 불가합니다.\n\n 1. 목적\n본인여부 확인, 각종 맞춤형 서비스 제공, 서비스 개선 및 신규 서비스 개발을 위한 통계활용, 계약이행 및 약관 변경 등의 고지를 위한 연락, 본인의사확인 및 민원 등의 고객불만처리\n\n 2. 항목\n이름,비밀번호, 휴대폰\n\n 3. 보유 및 이용기간\n회원 탈퇴시 즉시 파기</string>
    <string name="일급을_숫자로">일급을 숫자만 입력해주세요. 예)100,000</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="이력서작성">이력서작성</string>
    <string name="기본정보">기본정보</string>
    <string name="경력사항">경력사항</string>
    <string name="자기소개">자기소개</string>
    <string name="희망조건">희망조건</string>
    <string name="프로필_이미지">프로필 이미지</string>
    <string name="본인을_소개할">※ 본인을 소개할 수 있는 이미지를 업로드 해주세요.</string>
    <string name="이름">이름</string>
    <string name="본인의_이름을">본인의 이름을 입력해주세요.</string>
    <string name="생년월일">생년월일</string>
    <string name="생년월일을_선택">생년월일을 선택해주세요.</string>
    <string name="어플_사용_이전">※ 어플 사용 이전 본인의 이력을 추가해주세요.</string>
    <string name="경력추가하기">경력추가하기</string>
    <string name="경력_총">총 0년 0개월 0일</string>
    <string name="경력소개">경력소개</string>
    <string name="경력을_소개해">경력을 소개해주세요. 예) 사과따기</string>
    <string name="개월_미만">1개월 미만</string>
    <string name="개월_이상">1개월 이상</string>
    <string name="년_월_선택">년 월 선택</string>
    <string name="근무시작일">근무시작일</string>
    <string name="근무종료일">근무종료일</string>
    <string name="작업내용">작업내용</string>
    <string name="업무내용을_상세히">업무 내용을 상세히 입력해주세요.</string>
    <string name="본인을_한문장으로">본인을 한문장으로 표현해주세요.</string>
    <string name="나의성격">나의성격</string>
    <string name="추가코멘트">추가코멘트</string>
    <string name="예_성실함">예) 성실함,꾸준함, 긍정적</string>
    <string name="하고싶은_말이나">하고싶은 말이나 각오를 입력해주세요.</string>
    <string name="희망_근무지역">희망 근무지역</string>
    <string name="희망_근무요일">희망 근무요일</string>
    <string name="희망하는_근무지역을">희망하는 근무지역을 선택해주세요.</string>
    <string name="희망_품목">희망 품목</string>
    <string name="다중_선택이">다중 선택이 가능하며, 최대 3개까지 선택가능합니다.</string>
    <string name="추가하기">추가하기</string>
    <string name="식량작물">식량작물</string>
    <string name="채소">채소</string>
    <string name="과수">과수</string>
    <string name="특용작물">특용작물</string>
    <string name="화훼">화훼</string>
    <string name="축산">축산</string>
    <string name="농기계작업">농기계작업</string>
    <string name="기타">기타</string>
    <string name="기타품목을_입력">기타품목을 입력해주세요.</string>
    <string name="희망_근무형태">희망 근무형태</string>
    <string name="월화_월수금">예) 월화, 월수금</string>
    <string name="이력서_공개설정">이력서 공개설정</string>
    <string name="비공개">비공개</string>
    <string name="공개">공개</string>
    <string name="희망근무지역">희망근무지역</string>
    <string name="공고글_작성은">공고글 작성은 총 4단계입니다.</string>
    <string name="모든_항목을">모든 항목을 빠짐없이 입력 후\n 알맞은 일손을 찾아보세요!</string>
    <string name="공고글_작성하러_가기">공고글 작성하러 가기</string>
    <string name="현재_모집중인_공고글은">%1$s 농부님,\n현재 모집중인 공고글은\n%2$d개 입니다.</string>
    <string name="이력서와_맞는_일자리를">%1$s님,\n이력서와 맞는 일자리를\n찾아보세요!</string>
    <string name="지원자_수">지원자 수</string>
    <string name="tip">Tip!</string>
    <string name="해당_공고글과">해당 공고글과 맞는 사람을 찾아보세요!</string>
    <string name="이런_일손은_어때요">이런 일손은 어때요?</string>
    <string name="더보기">"<u>더보기</u>"</string>
    <string name="공고글">공고글</string>
    <string name="근무시간">근무시간</string>
    <string name="근무요일">근무요일</string>
    <string name="모집조건">모집조건</string>
    <string name="모집마감">모집마감</string>
    <string name="모집인원">모집인원</string>
    <string name="모집연령">모집연령</string>
    <string name="모집성별">모집성별</string>
    <string name="요구경력">요구경력</string>
    <string name="필요자격증">필요자격증</string>
    <string name="근무내용">근무내용</string>
    <string name="근무기간">근무기간</string>
    <string name="재배품목">재배품목</string>
    <string name="근무지역">근무지역</string>
    <string name="아직_작성된_공고글">아직 작성된 공고글이 없어요!</string>
    <string name="아직_작성된_이력서">아직 작성된 이력서가 없어요!</string>
    <string name="아직_일손이_없어요">아직 일손이 없어요</string>
    <string name="이력서_작성하기">이력서 작성하기</string>
    <string name="수정하기">수정하기</string>
    <string name="삭제하기">삭제하기</string>
    <string name="구직자_팁">Tip!&#160;&#160;작성하신 이력서와 맞는 일자리를 추천해드려요!</string>
    <string name="이런_일자리는_어때요">이런 일자리는 어때요?</string>
    <string name="아직_공고글이_없어요">아직 공고글이 없어요</string>
    <string name="공고쓰기가_완료">공고쓰기가 완료되었습니다!</string>
    <string name="이제_해당_공고글과">이제 해당 공고글과 알맞는\n일손을 찾아보세요.</string>
    <string name="공고글_확인하러">공고글 확인하러 가요</string>
    <string name="복사">"<u>복사</u>"</string>
    <string name="업무내용">업무내용</string>
    <string name="추가내용">추가내용</string>
    <string name="구인자_이름">구인자 %1$s님,</string>
    <string name="전화">전화</string>
    <string name="평점">평점</string>
    <string name="근무태도">근무태도</string>
    <string name="수행능력">수행능력</string>
    <string name="책임감">책임감</string>
    <string name="습득력">습득력</string>
    <string name="채용확정">채용확정</string>
    <string name="경력">경력</string>
    <string name="보유자격증">보유자격증</string>
    <string name="자격증종류">자격증종류</string>
    <string name="희망품목">희망품목</string>
    <string name="희망근무장소">희망근무장소</string>
    <string name="희망근무형태">희망근무형태</string>
    <string name="희망근무요일">희망근무요일</string>
    <string name="채용제안하기">채용제안하기</string>
    <string name="농부님을_위한">%1$s 농부님을 위한\n일손을 확인해보세요!</string>
    <string name="일손님을_위한">%1$s님을 위한\n일자리를 찾아보세요!</string>
    <string name="모든_일손">모든 일손</string>
    <string name="농글">농글</string>
    <string name="지역별">지역별</string>
    <string name="연령별">연령별</string>
    <string name="희망_품목별">희망 품목별</string>
    <string name="검색어를_입력하세요">검색어를 입력하세요</string>
    <string name="모든_일자리">모든 일자리</string>
    <string name="지원하기">지원하기</string>
    <string name="농부님_안녕하세요">%1$s 농부님,\n안녕하세요!</string>
    <string name="구직자님_안녕하세요">%1$s님,\n안녕하세요!</string>
    <string name="설정">설정</string>
    <string name="마이페이지">마이페이지</string>
    <string name="평가점수_5">평가점수 5.0</string>
    <string name="공고글_관리">공고글 관리</string>
    <string name="지원자_관리">지원자 관리</string>
    <string name="일손평가">일손평가</string>
    <string name="내_농가관리">내 농가관리</string>
    <string name="배지관리">배지관리</string>
    <string name="이용방법">이용방법</string>
    <string name="알림">알림</string>
    <string name="채용제안_수락">채용제안 수락</string>
    <string name="채용제안이_왔습니다_">채용제안이 왔습니다.</string>
    <string name="구인자가_보낸_채용제안">구인자가 보낸 채용제안을\n수락하시겠습니까?</string>
    <string name="취소">취소</string>
    <string name="일손평가하기">일손평가하기</string>
    <string name="고객센터">고객센터</string>
    <string name="비밀번호_변경">비밀번호 변경</string>
    <string name="로그아웃">로그아웃</string>
    <string name="탈퇴">탈퇴</string>
    <string name="로그아웃_하시겠습니까_">로그아웃 하시겠습니까?</string>
</resources>