<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.SettingFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            app:tint="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/설정"
            style="@style/b1_main"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/알림"
            android:layout_marginLeft="20dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:textColor="@color/black"
            style="@style/b1_main"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        
        <ImageView
            android:layout_width="52dp"
            android:layout_height="32dp"
            android:src="@drawable/switch_png"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/고객센터"
        style="@style/b1_main"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/비밀번호_변경"
        style="@style/b1_main"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/g5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/로그아웃"
        style="@style/b1_main"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/탈퇴"
        style="@style/b1_main"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"/>

</LinearLayout>
</layout>