<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.nongglenonggle.presentation.viewModel.worker.ResumeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.worker.resume.ResumeAFragment"
    android:layout_marginTop="24dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/프로필_이미지"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:includeFontPadding="false"
        android:textColor="@color/g1"
        android:lineSpacingExtra="-3sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/본인을_소개할"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:includeFontPadding="false"
        android:textColor="@color/g2"
        android:lineSpacingExtra="-3sp"/>

    <ImageView
        android:id="@+id/profile_upload"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/imageupload"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:text="@string/이름"
        android:textColor="@color/g1"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/g1"
        android:paddingLeft="4dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:hint="@string/본인의_이름을"
        android:textColor="@color/black"
        android:textColorHint="@color/g3"
        android:textCursorDrawable="@color/m1"
        android:paddingRight="16dp"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:text="@string/생년월일"
        android:textColor="@color/g1"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/noticeeditbox"
        android:clickable="true">
        <TextView
            android:id="@+id/birth_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/g_line"
            android:textSize="16sp"
            android:text="@string/생년월일을_선택"
            android:layout_marginLeft="16dp"
            android:paddingTop="15dp"
            android:paddingBottom="14dp"
            android:fontFamily="@font/spoqahansansneo_regular"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/date"
            android:layout_marginRight="16dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:text="@string/자격증"
        android:textColor="@color/g1"
        android:textSize="14sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/있음"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/spoqahansansneo_medium"
            android:background="@drawable/typebox_unactive"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/없음"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/spoqahansansneo_medium"
            android:background="@drawable/typebox_unactive"
            android:layout_weight="1" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/확인"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="다음"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@color/m1"
            android:textColor="@color/white"
            android:fontFamily="@font/spoqahansansneo_medium"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>