<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.farmer.notice.NoticeFragment"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/공고쓰기"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spoqahansansneo_regular"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/공고글_작성은"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/spoqahansansneo_medium"
            android:textSize="18sp"
            android:textColor="@color/g2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/모든_항목을"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/g2"
            android:fontFamily="@font/spoqahansansneo_regular"
            android:textSize="16sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gotoN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/m1"
            android:textColor="@color/white"
            android:text="@string/공고글_작성하러_가기"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/spoqahansansneo_medium" />

</LinearLayout>
</layout>