<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.farmer.notice.NoticeCompleteguideActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/bg">
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/notice_complete_final"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/공고쓰기가_완료"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textSize="18sp"
        android:textColor="@color/g1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/이제_해당_공고글과"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textSize="16sp"
        android:includeFontPadding="false"
        android:textColor="@color/g2"
        android:lineSpacingExtra="5sp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/completeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/m1"
        android:text="@string/공고글_확인하러"
        android:textColor="@color/white"
        android:fontFamily="@font/spoqahansansneo_medium"
        android:textSize="16sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

</LinearLayout>
</layout>